# dt-webapp-rust

./: Cargo.toml  Dockerfile  README.md
src/: decimal_time.rs  lib.rs  main.rs  routes.rs
static/: index.html  styles.css
static/js/: main.js  wasm_loader.js
wasm/: Cargo.toml
wasm/src/: lib.rs
