[package]
name = "decimal-time-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "WebAssembly bindings for decimal time calculations"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.88"
js-sys = "0.3.65"
web-sys = { version = "0.3.65", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Performance"
]}
console_error_panic_hook = "0.1.7"

# Remove the dependency on the parent crate to avoid compiling issues
# [dependencies.decimal-time-webapp]
# path = ".."